force-app/main/default/objects/Product_Catalog_Category__mdt/Product_Catalog_Category__mdt.object-meta.xml
<CustomObject>
    <label>Product Catalog Category</label>
    <pluralLabel>Product Catalog Categories</pluralLabel>
</CustomObject>