force-app/main/default/objects/Product_Catalog_Category__mdt/fields/isOnQuery__c.field-meta.xml
<CustomField>
    <fullName>isOnQuery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is On Query</label>
    <type>Checkbox</type>
</CustomField>