force-app/main/default/objects/Product_Catalog_Category__mdt/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Field Order show</fullName>
                <default>true</default>
                <label>Field Order show</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>