force-app/main/default/objects/Product_Catalog_Category__mdt/fields/Query_Field__c.field-meta.xml
<CustomField>
    <fullName>Query_Field__c</fullName>
    <label>Query Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>