force-app/main/default/objects/Product_Catalog_Category__mdt/fields/ShowName__c.field-meta.xml
<CustomField>
    <fullName>ShowName__c</fullName>
    <label>ShowName</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product Name</fullName>
                <default>true</default>
                <label>Product Name</label>
            </value>
            <value>
                <fullName>Product Code</fullName>
            </value>
            <value>
                <fullName>Product Brand</fullName>
            </value>
            <value>
                <fullName>Product Family</fullName>
            </value>
            <value>
                <fullName>Product SalesOrg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>